[package]
name = "yield-farming"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
license = "MIT-0"
repository = "https://github.com/your/project/repository"
homepage = "https://yourprojecthomepage.com"

[dependencies]
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false, features = ["std"] }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", tag = "polkadot-v1.9.0", default-features = false, features = ["std"] }
schnorrkel = "0.11.4"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = ["frame-support/std"]

[lints]
workspace = true
